--- a/contacts.qmd
+++ b/contacts.qmd
@@ -4,37 +4,35 @@ The SWAMP Team is composed of multiple team members at the State Water Board wit
 
 ## SWAMP Unit
 
-+--------------------+-------------------------------------------------------+--------------------------------------------------------------------------------------------+
-| Name               | Title                                                 | Program Area(s)                                                                            |
-+====================+=======================================================+============================================================================================+
-| Josh Davenport     | Stanford Fellow                                       | Tribal Data Initiatives                                                                    |
-+--------------------+-------------------------------------------------------+--------------------------------------------------------------------------------------------+
-| Ali Dunn           | Senior Environmental Scientist, Supervisor, Unit Lead | SWAMP Coordinator of statewide monitoring programs, plans and budgets                      |
-+--------------------+-------------------------------------------------------+--------------------------------------------------------------------------------------------+
-| Anna Holder        | Environmental Scientist                               | SWAMP Statewide Bioaccumulation Program Coordinator                                        |
-|                    |                                                       |                                                                                            |
-|                    |                                                       | Data science, data visualization and programming (R \[preferred\], Python, Unix, SQL, GIS) |
-|                    |                                                       |                                                                                            |
-|                    |                                                       | Science communication                                                                      |
-|                    |                                                       |                                                                                            |
-|                    |                                                       | Openscapes                                                                                 |
-|                    |                                                       |                                                                                            |
-|                    |                                                       | Tribal Coordinator                                                                         |
-|                    |                                                       |                                                                                            |
-|                    |                                                       | Racial Equity Trainer                                                                      |
-+--------------------+-------------------------------------------------------+--------------------------------------------------------------------------------------------+
-| Leah Brosseau      | CivicSpark Fellow                                     | Tribal Data Initiatives                                                                    |
-+--------------------+-------------------------------------------------------+--------------------------------------------------------------------------------------------+
-| Mary Tappel        | Environmental Scientist                               | Webpage updates                                                                            |
-+--------------------+-------------------------------------------------------+--------------------------------------------------------------------------------------------+
-| Michelle Tang      | Environmental Scientist                               | Data science, data visualization and programming (JavaScript, Python)                      |
-+--------------------+-------------------------------------------------------+--------------------------------------------------------------------------------------------+
-| Shuka Rastegarpour | Environmental Scientist                               | SWAMP Statewide Bioassessment Program Coordinator                                          |
-+--------------------+-------------------------------------------------------+--------------------------------------------------------------------------------------------+
-| Sydney Rilum       | California Sea Grant Fellow                           | Data science, data visualization (R)                                                       |
-|                    |                                                       |                                                                                            |
-|                    |                                                       | Science communication                                                                      |
-+--------------------+-------------------------------------------------------+--------------------------------------------------------------------------------------------+
++-------------------------------------------------------------------+-------------------------------------------------------+--------------------------------------------------------------------------------------------+
+| Name                                                              | Title                                                 | Program Area(s)                                                                            |
++===================================================================+=======================================================+============================================================================================+
+| Ali Dunn                                                          | Senior Environmental Scientist, Supervisor, Unit Lead | SWAMP Coordinator of statewide monitoring programs, plans and budgets                      |
++-------------------------------------------------------------------+-------------------------------------------------------+--------------------------------------------------------------------------------------------+
+| Leah Brosseau                                                     | CivicSpark Fellow                                     | Tribal Data Initiatives                                                                    |
++-------------------------------------------------------------------+-------------------------------------------------------+--------------------------------------------------------------------------------------------+
+| Anna Holder                                                       | Environmental Scientist                               | SWAMP Statewide Bioaccumulation Program Coordinator                                        |
+|                                                                   |                                                       |                                                                                            |
+|                                                                   |                                                       | Data science, data visualization and programming (R \[preferred\], Python, Unix, SQL, GIS) |
+|                                                                   |                                                       |                                                                                            |
+|                                                                   |                                                       | Science communication                                                                      |
+|                                                                   |                                                       |                                                                                            |
+|                                                                   |                                                       | Openscapes                                                                                 |
+|                                                                   |                                                       |                                                                                            |
+|                                                                   |                                                       | Tribal Coordinator                                                                         |
+|                                                                   |                                                       |                                                                                            |
+|                                                                   |                                                       | Racial Equity Trainer                                                                      |
++-------------------------------------------------------------------+-------------------------------------------------------+--------------------------------------------------------------------------------------------+
+| Mary Tappel                                                       | Environmental Scientist                               | Webpage updates                                                                            |
++-------------------------------------------------------------------+-------------------------------------------------------+--------------------------------------------------------------------------------------------+
+| Michelle Tang                                                     | Environmental Scientist                               | Data science, data visualization and programming (JavaScript, Python)                      |
++-------------------------------------------------------------------+-------------------------------------------------------+--------------------------------------------------------------------------------------------+
+| Shuka Rastegarpour                                                | Environmental Scientist                               | SWAMP Statewide Bioassessment Program Coordinator                                          |
++-------------------------------------------------------------------+-------------------------------------------------------+--------------------------------------------------------------------------------------------+
+| [Sydney Rilum](https://caseagrant.ucsd.edu/profiles/sydney-rilum) | California Sea Grant Fellow                           | Data science, data visualization (R)                                                       |
+|                                                                   |                                                       |                                                                                            |
+|                                                                   |                                                       | Science communication                                                                      |
++-------------------------------------------------------------------+-------------------------------------------------------+--------------------------------------------------------------------------------------------+
 
 ## SWAMP IQ
 
@@ -92,26 +90,62 @@ For more information, visit the [SWAMP IQ Wiki](https://sites.google.com/view/sw
 
 ## Former Fellows & Interns
 
-+---------------------+-----------------------------+--------------+-------------------------+
-| Name                | Title                       | Year         | Primary Project Area(s) |
-+=====================+=============================+==============+=========================+
-| Badhia Yunes Katz   | CivicSpark Fellow           | 2023         | Tribal Data Initiatives |
-+---------------------+-----------------------------+--------------+-------------------------+
-| Lindsey Metz\*      | California Sea Grant Fellow | 2022         |                         |
-+---------------------+-----------------------------+--------------+-------------------------+
-| Gabriella Moran     | CivicSpark Fellow           | 2022         | Tribal Data Initiatives |
-+---------------------+-----------------------------+--------------+-------------------------+
-| Brook Thompson      | Stanford Fellow             | 2021         | Tribal Data Initiatives |
-+---------------------+-----------------------------+--------------+-------------------------+
-| Corey Clatterbuck\* | California Sea Grant Fellow | 2021         | Healthy Watersheds      |
-+---------------------+-----------------------------+--------------+-------------------------+
-| Ross Cooper         | California Sea Grant Fellow | 2020         |                         |
-+---------------------+-----------------------------+--------------+-------------------------+
-| Maraid Jimenez      | CivicSpark Fellow           | 2020         | Tribal Data Initiatives |
-+---------------------+-----------------------------+--------------+-------------------------+
-| Anna Holder\*       | California Sea Grant Fellow | 2019         |                         |
-+---------------------+-----------------------------+--------------+-------------------------+
-| Nicole Hack         | California Sea Grant Fellow | 2018         |                         |
-+---------------------+-----------------------------+--------------+-------------------------+
++-----------------------------------------------------------------------------------------------------+-----------------------------+--------------+-----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
+| Name                                                                                                | Title                       | Year         | Primary Project Area(s) & Products                                                                                                                                                                              |
++=====================================================================================================+=============================+==============+=================================================================================================================================================================================================================+
+| Josh Davenport                                                                                      | Stanford Fellow             | 2023         | Tribal Data Initiatives                                                                                                                                                                                         |
+|                                                                                                     |                             |              |                                                                                                                                                                                                                 |
+|                                                                                                     |                             |              | Tribal Water Data [Map](https://gispublic.waterboards.ca.gov/portal/home/item.html?id=a71c1841907240e1a4d896c8cf2302a8) & [User Manual](https://cawaterboarddatacenter.github.io/tribal-water-data-map-manual/) |
++-----------------------------------------------------------------------------------------------------+-----------------------------+--------------+-----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
+| [Badhia Yunes Katz](https://civicspark.civicwell.org/2022-23-fellows/entry/8887/)                   | CivicSpark Fellow           | 2022-2023    | Tribal Data Initiatives                                                                                                                                                                                         |
+|                                                                                                     |                             |              |                                                                                                                                                                                                                 |
+|                                                                                                     |                             |              | Tribal Water Data [Map](https://gispublic.waterboards.ca.gov/portal/home/item.html?id=a71c1841907240e1a4d896c8cf2302a8) & [User Manual](https://cawaterboarddatacenter.github.io/tribal-water-data-map-manual/) |
++-----------------------------------------------------------------------------------------------------+-----------------------------+--------------+-----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
+| [Lindsey Metz](https://caseagrant.ucsd.edu/profiles/lindsey-metz)\*                                 | California Sea Grant Fellow | 2022         |                                                                                                                                                                                                                 |
++-----------------------------------------------------------------------------------------------------+-----------------------------+--------------+-----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
+| [Gabriella Moran](https://civicspark.civicwell.org/2021-22-fellows/entry/8611/)                     | CivicSpark Fellow           | 2021-2022    | Tribal Data Initiatives                                                                                                                                                                                         |
+|                                                                                                     |                             |              |                                                                                                                                                                                                                 |
+|                                                                                                     |                             |              | [Tribal Water Data Initiatives Webpage](https://www.waterboards.ca.gov/resources/oima/tribal_water_data_initiatives/)                                                                                           |
++-----------------------------------------------------------------------------------------------------+-----------------------------+--------------+-----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
+| [Brook Thompson](https://www.brookmthompson.com/)                                                   | Stanford Fellow             | 2021         | Tribal Data Initiatives                                                                                                                                                                                         |
++-----------------------------------------------------------------------------------------------------+-----------------------------+--------------+-----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
+| [Corey Clatterbuck](https://caseagrant.ucsd.edu/profiles/corey-clatterbuck-sheherhers)\*            | California Sea Grant Fellow | 2021         | Healthy Watersheds                                                                                                                                                                                              |
+|                                                                                                     |                             |              |                                                                                                                                                                                                                 |
+|                                                                                                     |                             |              | Trash                                                                                                                                                                                                           |
+|                                                                                                     |                             |              |                                                                                                                                                                                                                 |
+|                                                                                                     |                             |              | [Trash Data Dive 2021](https://cawaterboarddatacenter.github.io/trash-data-dive-2021/)                                                                                                                          |
++-----------------------------------------------------------------------------------------------------+-----------------------------+--------------+-----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
+| [Ross Cooper](https://caseagrant.ucsd.edu/profiles/ross-cooper)                                     | California Sea Grant Fellow | 2020         | Trash Datathon                                                                                                                                                                                                  |
+|                                                                                                     |                             |              |                                                                                                                                                                                                                 |
+|                                                                                                     |                             |              | Bioaccumulation                                                                                                                                                                                                 |
+|                                                                                                     |                             |              |                                                                                                                                                                                                                 |
+|                                                                                                     |                             |              | CASG Article: [The Predicament of Subsistence Fishing and Seafood Contaminants](https://caseagrant.ucsd.edu/news/the-predicament-of-subsistence-fishing-and-seafood-contaminants)                               |
++-----------------------------------------------------------------------------------------------------+-----------------------------+--------------+-----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
+| [Maraid Jimenez](https://civicspark.civicwell.org/2020-21-fellows/entry/7745/)                      | CivicSpark Fellow           | 2020-2021    | Tribal Data Initiatives                                                                                                                                                                                         |
++-----------------------------------------------------------------------------------------------------+-----------------------------+--------------+-----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
+| [Anna Holder](https://caseagrant.ucsd.edu/news/2019-california-sea-grant-state-fellows-announced)\* | California Sea Grant Fellow | 2019         | Healthy Watersheds                                                                                                                                                                                              |
+|                                                                                                     |                             |              |                                                                                                                                                                                                                 |
+|                                                                                                     |                             |              | Open Data & Science                                                                                                                                                                                             |
+|                                                                                                     |                             |              |                                                                                                                                                                                                                 |
+|                                                                                                     |                             |              | Trash                                                                                                                                                                                                           |
+|                                                                                                     |                             |              |                                                                                                                                                                                                                 |
+|                                                                                                     |                             |              | [CA Water Data Science Symposium](https://www.waterboards.ca.gov/resources/data_databases/wq_science_symposium.html)                                                                                            |
+|                                                                                                     |                             |              |                                                                                                                                                                                                                 |
+|                                                                                                     |                             |              | [College of Water Informatics](https://www.waterboards.ca.gov/resources/oima/cowi/)                                                                                                                             |
+|                                                                                                     |                             |              |                                                                                                                                                                                                                 |
+|                                                                                                     |                             |              | CASG Article: [Lean into Your Professional Swerves](https://caseagrant.ucsd.edu/news/lean-in-to-your-professional-swerves)                                                                                      |
++-----------------------------------------------------------------------------------------------------+-----------------------------+--------------+-----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
+| [Nicole Hack](https://caseagrant.ucsd.edu/news/2018-california-sea-grant-state-fellows-announced)   | California Sea Grant Fellow | 2018         | Trash                                                                                                                                                                                                           |
+|                                                                                                     |                             |              |                                                                                                                                                                                                                 |
+|                                                                                                     |                             |              | [Trash Data Dive](https://sites.google.com/sfei.org/trash/notes-from-the-field/data-dive?authuser=0)                                                                                                            |
+|                                                                                                     |                             |              |                                                                                                                                                                                                                 |
+|                                                                                                     |                             |              | CASG Article: [Being a Datahead](https://caseagrant.ucsd.edu/news/nicole-hack-being-a-datahead)                                                                                                                 |
++-----------------------------------------------------------------------------------------------------+-----------------------------+--------------+-----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
+| Andrew Hill\*                                                                                       | California Sea Grant Fellow | 2017         | Trash                                                                                                                                                                                                           |
+|                                                                                                     |                             |              |                                                                                                                                                                                                                 |
+|                                                                                                     |                             |              | [Trash Tracker](https://github.com/CAWaterBoardDataCenter/Trash-Tracker)                                                                                                                                        |
+|                                                                                                     |                             |              |                                                                                                                                                                                                                 |
+|                                                                                                     |                             |              | CASG Article: [Tracking Trash](https://caseagrant.ucsd.edu/news/andrew-hill-tracking-trash)                                                                                                                     |
++-----------------------------------------------------------------------------------------------------+-----------------------------+--------------+-----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
 
-: \*Fellows who have been hired on at the Water Boards
+: \*Fellows who were then hired by the Water Boards
